[package]
name = "url_shortener_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.4"
nanoid = "0.4"
url ="2.2"

axum = { version = "0.6.1", features = ["headers"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = "1.0.147"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
serde_json = "1.0.87"
tower-http = { version = "0.3.4", features = ["trace"] }
once_cell = "1.10.0"



